sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value L
    if (L(i)>L(i+1)){
        ^AlgBubbleSort1:4: error: not found: value L
    if (L(i)>L(i+1)){
             ^